<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindTutorActivity">

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay" />


  <ListView
      android:id="@+id/listview"
      android:layout_width="407dp"
      android:layout_height="483dp"
      android:layout_marginTop="44dp"
      android:layout_marginEnd="1dp"
      android:visibility="visible"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Spinner
      android:id="@+id/spinnerCourse"
      android:layout_width="208dp"
      android:layout_height="44dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="12dp"
      android:background="@android:drawable/btn_dropdown"
      android:spinnerMode="dropdown"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/listview"
      app:layout_constraintVertical_bias="0.0" />

  <com.beardedhen.androidbootstrap.BootstrapButton
      android:id="@+id/btnRefresh"
      android:layout_width="wrap_content"
      android:layout_height="39dp"
      android:layout_margin="5dp"

      android:layout_marginStart="304dp"
      android:layout_marginTop="60dp"

      android:layout_marginEnd="16dp"
      android:layout_marginBottom="112dp"
      android:background="#f05924"
      android:text="Refresh"
      android:textColor="@android:color/white"
      app:bootstrapBrand="success"
      app:bootstrapSize="lg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/listview"
      app:roundedCorners="true" />

  <RadioButton
      android:id="@+id/GPA_Check"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="85dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="104dp"
      android:text="Gpa"
      app:layout_constraintBottom_toTopOf="@+id/listview"
      app:layout_constraintEnd_toStartOf="@+id/RATE_Check"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <RadioButton
      android:id="@+id/RATE_Check"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="101dp"
      android:text="Price"
      app:layout_constraintBottom_toTopOf="@+id/listview"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/name_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="36dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:hint="Tutor Name"
      android:inputType="textPersonName"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/spinnerCourse"
      app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>